# zeroed

./: .gitignore  CHEATSHEET.md  CLAUDE.md  LICENSE  README.md
cli/: pyproject.toml
cli/zeroed_cli/: main.py
cli/zeroed_cli/categorization/: engine.py
cli/zeroed_cli/commands/: __init__.py  accounts.py  budget.py  categories.py  import_cmd.py  reports.py  rules.py  transactions.py
cli/zeroed_cli/core/: database.py  models.py
cli/zeroed_cli/importers/: __init__.py  base.py  chase.py  generic.py
cli/zeroed_cli/services/: budget_service.py
web/: package-lock.json  package.json
web/prisma/: schema.prisma
web/src/app/: page.tsx
web/src/app/api/budget/: route.ts
